--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -16,16 +16,15 @@ body:
       required: true
   - type: markdown
     attributes:
-      value: "## 작업 상세 내용\n> 작업 목록을 아래에 추가해주세요."
-  - type: checkboxes
+      value: "## 작업 상세 내용"
+  - type: textarea
     id: tasks
     attributes:
       label: "작업 목록"
-      description: "완료해야 할 작업 목록을 체크해주세요."
-      options:
-        - label: "TODO 1"
-        - label: "TODO 2"
-        - label: "TODO 3"
+      description: "작업 내용을 자유롭게 입력해주세요. 여러 줄로 입력 가능합니다."
+      placeholder: "- [ ] 작업 1\n- [ ] 작업 2\n- [ ] 작업 3"
+    validations:
+      required: true
   - type: textarea
     id: reference
     attributes:
