--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -1,11 +1,11 @@
 name: "기능 요청 템플릿"
 description: "기능, UI, 문서 개선 및 추가 요청을 위한 이슈 템플릿입니다."
-title: "기능 요청"
+title: "제목을 입력해주세"
 
 body:
   - type: markdown
     attributes:
-      value: "## 어떤 기능인가요?\n> 추가하려는 기능에 대해 간결하게 설명해주세요."
+      value: "## 어떤 기능인가요?\n\n> 추가하려는 기능에 대해 간결하게 설명해주세요."
   - type: textarea
     id: description
     attributes:
@@ -16,15 +16,19 @@ body:
       required: true
   - type: markdown
     attributes:
-      value: "## 작업 상세 내용"
-  - type: textarea
+      value: "## 작업 상세 내용\n\n- 작업 목록을 아래 텍스트 필드에 작성해주세요."
+ - type: textarea
     id: tasks
     attributes:
-      label: "작업 목록"
-      description: "작업 내용을 자유롭게 입력해주세요. 여러 줄로 입력 가능합니다."
-      placeholder: "- [ ] 작업 1\n- [ ] 작업 2\n- [ ] 작업 3"
+    label: "작업 목록"
+    description: "작업 항목을 한 줄씩 입력하세요. 엔터를 눌러 다음 줄로 넘어갈 수 있습니다."
+    placeholder: "- [ ] 작업 항목 1\n- [ ] 작업 항목 2\n- [ ] 작업 항목 3"
+    value: "- [ ] 작업 항목 1\n- [ ] 작업 항목 2\n- [ ] 작업 항목 3"
     validations:
       required: true
+  - type: markdown
+    attributes:
+      value: "## 참고할만한 자료 (선택)"
   - type: textarea
     id: reference
     attributes:
