--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -5,7 +5,7 @@ title: "제목을 입력해주세요"
 body:
   - type: markdown
     attributes:
-      value: "## 어떤 기능인가요?\n\n
+      value: "## 어떤 기능인가요?\n\n> 추가하려는 기능에 대해 간결하게 설명해주세요."
   - type: textarea
     id: description
     attributes:
@@ -16,7 +16,7 @@ body:
       required: true
   - type: markdown
     attributes:
-      value: "## 작업 상세 내용\n\n
+      value: "## 작업 상세 내용\n\n- 작업 목록을 아래 텍스트 필드에 작성해주세요."
   - type: textarea
     id: tasks
     attributes:
