--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -22,8 +22,15 @@ body:
     attributes:
       label: "작업 목록"
       description: "작업 항목을 한 줄씩 입력하세요. 엔터를 눌러 다음 줄로 넘어갈 수 있습니다."
-      placeholder: "- [ ] 작업 항목 1\n- [ ] 작업 항목 2\n- [ ] 작업 항목 3"
-      value: "- [ ] 작업 항목 1\n- [ ] 작업 항목 2\n- [ ] 작업 항목 3"
+      placeholder: |
+        🫧 <ex. 예시 지문>
+        - [ ] <체크 1>
+        - [ ] <체크 2>
+      value: |
+        - [ ] <작업 1>
+        - [ ] <작업 2>
+        - [ ] <작업 3>
+        - [ ] 더입력 ...
     validations:
       required: true
   - type: markdown
@@ -33,5 +40,5 @@ body:
     id: reference
     attributes:
       label: "참고 자료"
-      description: "참고할만한 자료의 링크나 설명을 추가해주세요 (선택 사항)."
+      description: "참고할만한 자료의 링크나 설명을 추가해주세요."
       placeholder: "참고 자료를 여기에 입력해주세요."
