--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -22,10 +22,9 @@ body:
     attributes:
       label: "작업 목록"
       description: "작업 항목을 한 줄씩 입력하세요. 엔터를 눌러 다음 줄로 넘어갈 수 있습니다."
-      placeholder: |
-        <ex. 예시 지문>
-        - [ ] <체크 1>
-        - [ ] <체크 2>
+      placeholder:
+        - [ ] <UI 구현하기>
+        - [ ] <함수 구현하기>
   - type: markdown
     attributes:
       value: "## 📚 참고할만한 자료 (선택)"
