--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -25,6 +25,8 @@ body:
       placeholder: |
         - [ ] <UI 구현하기>
         - [ ] <함수 구현하기>
+      options:
+        - label: ""
   - type: markdown
     attributes:
       value: "## 📚 참고할만한 자료 (선택)"
