--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -23,9 +23,9 @@ body:
       label: "작업 목록"
       description: "작업 항목을 한 줄씩 입력하세요. 엔터를 눌러 다음 줄로 넘어갈 수 있습니다."
       placeholder: |
-        - [ ] <UI 구현하기>
-        - [ ] <함수 구현하기>
-      value: "- [ ]"
+        - [ ] UI 구현하기
+        - [ ] 함수 구현하기
+      value: "- [ ] "
   - type: markdown
     attributes:
       value: "## 📚 참고할만한 자료 (선택)"
