--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -11,7 +11,6 @@ body:
     attributes:
       label: "기능 설명"
       description: "추가하려는 기능에 대해 자세히 설명해주세요."
-      placeholder: "여기에 기능에 대한 설명을 적어주세요."
     validations:
       required: true
   - type: markdown
@@ -34,4 +33,5 @@ body:
     attributes:
       label: "참고 자료"
       description: "참고할만한 자료의 링크나 설명을 추가해주세요."
-      placeholder: "참고 자료를 여기에 입력해주세요."
+      value: |
+        - [ ] 참고 자료를 여기에 입력해주세요.
