--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -11,6 +11,7 @@ body:
     attributes:
       label: "기능 설명"
       description: "추가하려는 기능에 대해 자세히 설명해주세요."
+      placeholder: "ex) - UI 구현 완료"
     validations:
       required: true
   - type: markdown
