--- a/.github/ISSUE_TEMPLATE/issue_template.yml
+++ b/.github/ISSUE_TEMPLATE/issue_template.yml
@@ -33,4 +33,4 @@ body:
     attributes:
       label: "참고 자료"
       description: "참고할만한 자료의 링크나 설명을 추가해주세요 (선택 사항)."
-      placeholder: "참고 자료를 여기에 입력해주세요."
+      placeholder: "ex) - tanstack-query stale time: (링크)"
